# web2spec

./: .gitignore  AGENTS.md  README.md  pyproject.toml  site_context.example.md
src/web2spec/: __init__.py  analyst.py  cartographer.py  cli.py  config.py  distiller.py  guide.py  i18n.py  models.py  pipeline.py  report.py  utils.py
src/web2spec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cartographer.py  test_distiller.py  test_guide.py  test_pipeline.py  test_pipeline_intent.py  test_report.py
